--- a/.github/workflows/update-configs.yml
+++ b/.github/workflows/update-configs.yml
@@ -2,7 +2,7 @@ name: Update Proxy Configs
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 */2 * * *'  # این خط تغییر کرده است
   workflow_dispatch:
 
 permissions:
